force-app/main/default/objects/cgcloud__Tour_Template_Object_Reference__c/cgcloud__Tour_Template_Object_Reference__c.object-meta.xml
<CustomObject>
    <description>Holds details of the object references of a tour template.</description>
    <label>Tour Template Object Reference</label>
    <nameField>
        <displayFormat>TTOR-{000000}</displayFormat>
        <label>Tour Template Object Reference Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tour Template Object References</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>