force-app/main/default/objects/cgcloud__Tour_Template_Object_Reference__c/fields/cgcloud__Order_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Order_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Template</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>cgcloud__Order_Template__c.cgcloud__Sales_Org__c</field>
            <operation>equals</operation>
            <valueField>$User.cgcloud__Sales_Org__c</valueField>
        </filterItems>
        <filterItems>
            <field>cgcloud__Order_Template__c.cgcloud__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>cgcloud__Order_Template__c</referenceTo>
    <relationshipLabel>Tour Template Object References</relationshipLabel>
    <relationshipName>Tour_Template_Object_References</relationshipName>
    <type>Lookup</type>
</CustomField>