force-app/main/default/objects/cgcloud__Tour_Template_Object_Reference__c/fields/cgcloud__Start_Of_Day__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Start_Of_Day__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Start of Day</label>
    <type>Checkbox</type>
</CustomField>