force-app/main/default/objects/cgcloud__Tour_Template_Object_Reference__c/fields/cgcloud__Tour_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Tour_Template__c</fullName>
    <label>Tour Template</label>
    <referenceTo>cgcloud__Tour_Template__c</referenceTo>
    <relationshipLabel>Tour Template Object References</relationshipLabel>
    <relationshipName>Tour_Template_Object_References</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>