force-app/main/default/objects/cgcloud__Tour_Template_Object_Reference__c/validationRules/cgcloud__Inactive_Templates_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Inactive_Templates_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>( cgcloud__Order_Template__r.cgcloud__Active__c  = false )  || ( cgcloud__Signature_Template__r.cgcloud__Active__c = false )  || ( cgcloud__Visit_Template__r.cgcloud__Active__c  = false ) || ( cgcloud__Tour_Template__r.cgcloud__Active__c  = false )</errorConditionFormula>
    <errorMessage>Inactive Templates are present. Please add the active templates</errorMessage>
</ValidationRule>