force-app/main/default/objects/cgcloud__Tour_Template_Object_Reference__c/validationRules/cgcloud__Sales_Org_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Sales_Org_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK( cgcloud__Visit_Template__c )), TEXT(cgcloud__Visit_Template__r.cgcloud__Sales_Org__c) &lt;&gt;TEXT( cgcloud__Tour_Template__r.cgcloud__Sales_Org__c))||
        AND(NOT(ISBLANK( cgcloud__Order_Template__c )),
        TEXT( cgcloud__Order_Template__r.cgcloud__Sales_Org__c )&lt;&gt;TEXT( cgcloud__Tour_Template__r.cgcloud__Sales_Org__c)) ||
        AND(NOT(ISBLANK( cgcloud__Signature_Template__c )) , TEXT( cgcloud__Tour_Template__r.cgcloud__Sales_Org__c )&lt;&gt;TEXT( cgcloud__Signature_Template__r.cgcloud__Sales_Org__c ))</errorConditionFormula>
    <errorMessage>The Tour Template, the Signature Template, the Visit Template and the Order Template must have the same Sales Org.</errorMessage>
</ValidationRule>